[tool.poetry]
name = "aissemble-extensions-model-training-api-sagemaker"
version = "1.8.2"
description = ""
authors = ["aiSSEMBLE Baseline Community <aissemble@bah.com>"]
readme = "README.md"
packages = [
    {include = "model_training_api_sagemaker", from = "src"},
]

[tool.poetry.dependencies]
python = ">=3.11.4, <3.12"
fastapi = ">=0.95.0"
uvicorn = {version = "^0.18.0", extras = ["standard"]}
pydantic = ">=2.8.0"
kubernetes = ">=26.1.0"
urllib3 = "^1.26.18"
krausening = ">=19"
sagemaker = ">=2.218.0"
mlflow = "^2.3.1"

[tool.poetry.group.dev.dependencies]
black = ">=22.1.0"
behave = ">=1.2.6"
nose = ">=1.3.7"
setuptools = "^69.0.3"
kappa-maki = ">=1.0.1"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
