[tool.poetry]
name = "aissemble-foundation-versioning-service"
version = "1.10.0"
description = ""
authors = ["aiSSEMBLE Baseline Community <aissemble@bah.com>"]
readme = "README.md"
packages = [
    {include = "model_versioning", from = "src"},
    {include = "util", from = "src"}
]

# NB Later iterations should improve this project and aissemble-versioning-docker's structure, as dependencies from
# the versioning_api.py module within aissemble-versioning-docker are defined here and installed when the corresponding
# wheel for aissemble-versioning-service is installed.
[tool.poetry.dependencies]
python = ">=3.8"
mlflow = "^2.3.1"
fastapi = ">=0.95.0"
uvicorn = {version = "^0.18.0", extras = ["standard"]}

# Poetry export-without-path-deps fails due to a "Dependency walk failed at urllib3 (>=1.26.0)"
# Adding to resolve the issue; Poetry changes the value from >= -> ^
urllib3 = "^1.26.18"

aissemble-foundation-core-python = {path = "../aissemble-foundation-core-python/", develop = true}
aissemble-foundation-pdp-client-python = {path = "../foundation-security/aissemble-foundation-pdp-client-python/", develop = true}

[tool.poetry.group.dev.dependencies]
black = ">=22.1.0"
behave = ">=1.2.6"
nose = ">=1.3.7"
setuptools = "^69.0.3"
kappa-maki = ">=1.0.1"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
