[tool.poetry]
name = "aissemble-extensions-encryption-vault-python"
version = "1.10.0"
description = "Vault data encryption classes (python)"
authors = ["aiSSEMBLE Baseline Community <aissemble@bah.com>"]
readme = "README.md"
packages = [
    {include = "aissemble_encrypt", from="src"}
]

[tool.poetry.dependencies]
python = ">=3.8"
hvac = [
    {version = ">=1.0.0", python = ">=3.8,<4.0"},
]
cryptography = ">=42.0.4"
krausening = ">=20"
urllib3 = "^1.26.18"

[tool.poetry.group.dev.dependencies]
black = ">=22.1.0"
behave = ">=1.2.6"
nose = ">=1.3.7"
testcontainers = [
    {version = ">=4.5.1", python = ">=3.9,<4.0"},
    {version = "3.7.1", python = ">=3.8, <3.9"},
]
setuptools = "^69.0.3"
kappa-maki = ">=1.0.1"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
