[tool.poetry]
name = "aissemble-extensions-transform-spark-python"
version = "1.8.2"
description = "Contains the core Python implementation of data transform for Spark"
authors = ["aiSSEMBLE Baseline Community <aissemble@bah.com>"]
readme = "README.md"
packages = [
    {include = "data_transform_spark", from="src"}
]

[tool.poetry.dependencies]
python = ">=3.11.4, <4"
krausening = ">=19"
pydantic = ">=2.8.0"
pyspark = "3.4.0"
cryptography = ">=42.0.4"
urllib3 = "^1.26.18"

aissemble-foundation-core-python = {path = "../../../foundation/aissemble-foundation-core-python/", develop = true}
aissemble-foundation-transform-core-python = {path = "../../../foundation/foundation-transform/aissemble-foundation-transform-core-python/", develop = true}

[tool.poetry.group.dev.dependencies]
black = ">=22.1.0"
behave = ">=1.2.6"
nose = ">=1.3.7"
kappa-maki = ">=1.0.1"
pylint = "^3.1.0"


[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

