[tool.poetry]
name = "aissemble-foundation-drift-detection-client-python"
version = "1.7.0.dev"
description = ""
authors = ["aiSSEMBLE Baseline Community <aissemble@bah.com>"]
readme = "README.md"
packages = [
    {include = "config", from = "src"},
    {include = "drift", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.11.4, <4"
pydantic = ">=1.8.0,<2.0.0"
requests = ">=2.32.2"
krausening = ">=19"
cryptography = ">=42.0.4"
urllib3 = "^1.26.18"

[tool.poetry.group.dev.dependencies]
black = ">=22.1.0"
behave = ">=1.2.6"
kappa-maki = ">=1.0.1"
pylint = "^3.1.0"

[tool.pylint.'MESSAGES CONTROL']
# Adding the pydantic package to pylint's whitelist as it raises linting errors. 
# See issue: https://github.com/pydantic/pydantic/issues/1961
extension-pkg-whitelist = "pydantic"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
