[tool.poetry]
name = "aissemble-foundation-encryption-policy-python"
version = "1.8.2"
description = "Data encryption policy for Python scripts"
authors = ["aiSSEMBLE Baseline Community <aissemble@bah.com>"]
readme = "README.md"
packages = [
    {include = "aissemble_encrypt_policy", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.11.4, <4"
krausening = ">=19"
cryptography = ">=42.0.4"
urllib3 = "^1.26.18"

aissemble-foundation-core-python = {path = "../../aissemble-foundation-core-python/", develop = true}

[tool.poetry.group.dev.dependencies]
black = ">=22.1.0"
behave = ">=1.2.6"
nose = ">=1.3.7"
kappa-maki = ">=1.0.1"
pylint = "^3.1.0"


[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
