[tool.poetry]
name = "aissemble-foundation-pdp-client-python"
version = "1.8.2"
description = "REST Policy Decision Point (PDP) client for Python-based components"
authors = ["aiSSEMBLE Baseline Community <aissemble@bah.com>"]
readme = "README.md"
packages = [
    {include = "aissemble_security", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.11.4, <4"
requests = ">=2.32.2"
urllib3 = "^1.26.18"

[tool.poetry.group.dev.dependencies]
black = ">=22.1.0"
behave = ">=1.2.6"
nose = ">=1.3.7"
kappa-maki = ">=1.0.1"
pylint = "^3.1.0"


[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
