[tool.poetry]
name = "aissemble-foundation-data-lineage-python"
version = "1.10.0"
description = "Data lineage API for Python scripts"
authors = ["aiSSEMBLE Baseline Community <aissemble@bah.com>"]
readme = "README.md"
packages = [
    {include = "aissemble_data_lineage", from = "src"}
]
include = [
    { path = "src/aissemble_data_lineage/default_properties/*" }
]

[tool.poetry.dependencies]
python = ">=3.8"
krausening = ">=20"
kafka-python = "^2.0.2"
openlineage-python = {version = "^0.21.1"}

#[tool.poetry.group.monorepo.dependencies]
aissemble-foundation-messaging-python = { path = "../../../foundation-messaging/foundation-messaging-python/aissemble-foundation-messaging-python-client", develop = true}

[tool.poetry.group.dev.dependencies]
black = ">=22.1.0"
behave = ">=1.2.6"
nose = ">=1.3.7"
testcontainers = [
    {version = ">=4.5.1", python = ">=3.9,<4.0"},
    {version = "3.7.1", python = ">=3.8, <3.9"},
]
callee = "0.3.1"
confluent-kafka = { version = "2.1.1", optional = true }
kappa-maki = ">=1.0.1"
pylint = "^3.1.0"


[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
