[tool.poetry]
name = "aissemble-machine-learning-inference"
version = "1.8.2"
description = "Machine Learning Inference Test Module"
authors = ["aiSSEMBLE Baseline Community <aissemble@bah.com>"]

# Ensure that generated code is included in package archives
include = ["src/aissemble_machine_learning_inference/generated/**/*"]

[tool.poetry.dependencies]
aissemble-foundation-pdp-client-python = {path = "../../../../foundation/foundation-security/aissemble-foundation-pdp-client-python", develop = true}
aissemble-foundation-core-python = {path = "../../../../foundation/aissemble-foundation-core-python", develop = true}
aissemble-foundation-encryption-policy-python = {path = "../../../../foundation/foundation-encryption/aissemble-foundation-encryption-policy-python", develop = true}
aissemble-extensions-encryption-vault-python = {path = "../../../../extensions/extensions-encryption/aissemble-extensions-encryption-vault-python", develop = true}
python = "^3.11.4"
mlflow = "^2.3.1"
fastapi = ">=0.95.0"
uvicorn = { version = "^0.18.0", extras = ["standard"]}
grpcio = "^1.50.0"
krausening = ">=19"
pandas = "^1.5.0"

# The latest versions of scipy cap numpy to < 1.26.0, but older versions don't. The recent release of numpy caused
# scipy to downgrade to a version that is incompatible with the latest version of numpy. Presumably, scipy will release
# a new version that is compatible with the latest version of numpy, but until then, we need to explicitly avoid the downgrade.
scipy = "^1.9.3"



[tool.poetry.group.dev.dependencies]
black = ">=22.1.0"
behave = ">=1.2.6"
nose = ">=1.3.7"
grpcio-tools = "^1.50.0"
grpcio-testing = "^1.50.0"
kappa-maki = ">=1.0.1"
pylint = "^3.1.0"

[tool.pylint.MASTER]
ignore-patterns = '.*pb2[\S]*.py'

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
