[tool.poetry]
name = "aissemble-machine-learning-sagemaker-training"
version = "1.8.2"
description = "Description of package"
authors = ["Your Name <you@example.com>"]

packages = [
    {include = "aissemble_machine_learning_sagemaker_training", from = "src"}
]

# Ensure that generated code is included in package archives
include = ["src/aissemble_machine_learning_sagemaker_training/generated/**/*"]

[tool.poetry.dependencies]
python = "^3.11.4"
sagemaker-training = "^4.6.1"
mlflow = "^2.3.1"

# Necessary for working with v39.0.0 of crytopgraphy
# https://stackoverflow.com/questions/74981558/error-updating-python3-pip-attributeerror-module-lib-has-no-attribute-openss
pyopenssl = ">22.1.0"

# If protobuf is not explicitly downgraded and 4.x is transitively used via mlflow, developers
# may need to set the PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python to achieve backward compatibility
# with any modules that were generated using protobuf 3.x
protobuf = "^3.20.3"

# The latest versions of scipy cap numpy to < 1.26.0, but older versions don't. The recent release of numpy caused
# scipy to downgrade to a version that is incompatible with the latest version of numpy. Presumably, scipy will release
# a new version that is compatible with the latest version of numpy, but until then, we need to explicitly avoid the downgrade.
scipy = "^1.9.3"

[tool.poetry.group.dev.dependencies]
black = ">=22.1.0"
behave = ">=1.2.6"
nose = ">=1.3.7"
kappa-maki = ">=1.0.1"
pylint = "^3.1.0"



[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
