[tool.poetry]
name = "aissemble-machine-learning-sagemaker-training"
version = "1.10.0.dev"
description = "Description of package"
authors = ["Your Name <you@example.com>"]

packages = [
    {include = "aissemble_machine_learning_sagemaker_training", from = "src"}
]

# Ensure that generated code is included in package archives
include = ["src/aissemble_machine_learning_sagemaker_training/generated/**/*"]

[tool.poetry.dependencies]
python = ">=3.8"
sagemaker-training = ">=4.6.1"
mlflow = ">=2.16.2"

# Poetry lock was timing out attempting to resolve dependencies
# I removed the mlflow dependency and ran poetry add mlflow and the dependencies resolved, so I copied
# over the problematic pacakges' versions from the lock file.
opentelemetry-api = ">=1.9.0,<3"
opentelemetry-sdk = ">=1.9.0,<3"
mlflow-skinny = "2.16.2"
botocore = ">=1.33.2,<2.0a.0"

# Poetry export-without-path-deps fails due to a "Dependency walk failed at urllib3 (>=1.26.0)"
# Adding to resolve the issue; Poetry changes the value from >= -> ^
urllib3 = "^1.26.18"

[tool.poetry.group.dev.dependencies]
black = ">=22.1.0"
behave = ">=1.2.6"
nose = ">=1.3.7"
kappa-maki = ">=1.0.1"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
